--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ Cilium group
                                    <img src="images/project/network.jpg" class="img-fluid" alt="project image">
 
                                    <div class="project-info">
-                                        <small>Networks & communication</small>
+                                        <small>Networking</small>
 
                                         <h3>
                                              <a href="#">
